--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 /* GENERAL */
+
+
+/* https://images.pexels.com/photos/1092730/pexels-photo-1092730.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
+ */
+
 .container {
-    background: whitesmoke;
+    background-image: url('https://images.pexels.com/photos/5945607/pexels-photo-5945607.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
     padding: 20px 20px 0 20px;
 }
 
@@ -49,7 +54,9 @@ a {
     flex: 10% 0;
 }
 
+
 /* INSCRIPTION */
+
 .form-fields {
     max-width: 50vh;
     margin: 10px auto auto;
