--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 .gradient-card {
-    background-color: rgb(201, 222, 150);
+    background-color: rgb(152, 150, 222);
 }
 
 .card-title {
@@ -29,7 +29,7 @@
 }
 
 a {
-    color: #4fa400;
+    color: #025ca7;
 }
 
 .navbar {
